Update for SAMSUNG responsive

--- a/swp_frontend/driverInfo.html
+++ b/swp_frontend/driverInfo.html
@@ -64,6 +64,18 @@
                 padding: 6px;
             }
         }
+        /* Samsung Galaxy S8/S9/S10/S20, Note 8/9/10/20, etc. */
+        @media only screen and (max-device-width: 360px) {
+            .container {
+                padding: 8px;
+            }
+            .info-group span {
+                padding: 5px;
+            }
+            h2 {
+                font-size: 1.5em;
+            }
+        }
     </style>
 </head>
 <body>
