--- a/swp_frontend/login.html
+++ b/swp_frontend/login.html
@@ -63,6 +63,54 @@
             color: red;
             text-align: center;
         }
+        @media (max-width: 768px) {
+            .container {
+                padding: 15px;
+            }
+            .form-group input {
+                padding: 8px;
+            }
+            .buttons button {
+                padding: 8px 15px;
+                font-size: 0.9em;
+            }
+        }
+        @media (max-width: 480px) {
+            .container {
+                padding: 10px;
+            }
+            .form-group input {
+                padding: 6px;
+            }
+            .buttons button {
+                padding: 6px 12px;
+                font-size: 0.85em;
+            }
+        }
+        @media (max-width: 360px) {
+            .container {
+                padding: 8px;
+            }
+            .form-group input {
+                padding: 5px;
+            }
+            .buttons button {
+                padding: 5px 10px;
+                font-size: 0.8em;
+            }
+        }
+        @media (max-width: 320px) {
+            .container {
+                padding: 5px;
+            }
+            .form-group input {
+                padding: 4px;
+            }
+            .buttons button {
+                padding: 4px 8px;
+                font-size: 0.75em;
+            }
+        }
     </style>
 </head>
 <body>
