Update for SAMSUNG responsive

--- a/swp_frontend/menu.html
+++ b/swp_frontend/menu.html
@@ -109,6 +109,48 @@
                 font-size: 0.8em;
             }
         }
+        @media (max-width: 360px) {
+            .container {
+                padding: 10px;
+            }
+            .logo {
+                font-size: 1.8em;
+                margin-bottom: 5px;
+            }
+            .subheading {
+                font-size: 0.9em;
+                margin-bottom: 5px;
+            }
+            .menu li {
+                padding: 8px;
+                font-size: 0.8em;
+            }
+            .logout {
+                padding: 5px 10px;
+                font-size: 0.75em;
+            }
+        }
+        @media (max-width: 320px) {
+            .container {
+                padding: 5px;
+            }
+            .logo {
+                font-size: 1.5em;
+                margin-bottom: 5px;
+            }
+            .subheading {
+                font-size: 0.8em;
+                margin-bottom: 5px;
+            }
+            .menu li {
+                padding: 5px;
+                font-size: 0.7em;
+            }
+            .logout {
+                padding: 4px 8px;
+                font-size: 0.7em;
+            }
+        }
     </style>
 </head>
 <body>
