--- a/swp_frontend/mileDetails.html
+++ b/swp_frontend/mileDetails.html
@@ -27,6 +27,7 @@
         h2 {
             text-align: center;
             color: #ff66a3;
+            margin-bottom: 20px;
         }
         .form-group {
             margin-bottom: 20px;
@@ -48,6 +49,7 @@
             display: flex;
             flex-wrap: wrap;
             gap: 20px;
+            justify-content: center;
         }
         .image-container img {
             max-width: 100%;
@@ -78,6 +80,60 @@
             }
             .image-container {
                 flex-direction: column;
+                align-items: center;
+            }
+            .image-container img {
+                max-width: 90%;
+                margin-bottom: 10px;
+            }
+            .buttons button {
+                padding: 8px 16px;
+                font-size: 0.9em;
+            }
+        }
+        @media (max-width: 480px) {
+            .container {
+                padding: 10px;
+            }
+            .image-container img {
+                max-width: 100%;
+                margin-bottom: 8px;
+            }
+            .buttons button {
+                padding: 6px 12px;
+                font-size: 0.8em;
+            }
+        }
+        @media (max-width: 360px) {
+            .container {
+                padding: 8px;
+            }
+            h2 {
+                font-size: 1.2em;
+                margin-bottom: 15px;
+            }
+            .form-group {
+                margin-bottom: 15px;
+            }
+            .buttons button {
+                padding: 5px 10px;
+                font-size: 0.75em;
+            }
+        }
+        @media (max-width: 320px) {
+            .container {
+                padding: 5px;
+            }
+            h2 {
+                font-size: 1em;
+                margin-bottom: 10px;
+            }
+            .form-group {
+                margin-bottom: 10px;
+            }
+            .buttons button {
+                padding: 4px 8px;
+                font-size: 0.7em;
             }
         }
     </style>
@@ -96,23 +152,33 @@
             </div>
             <div class="form-group">
                 <label>ภาพถ่ายเลขไมล์</label>
-                <img id="mileImage" src="" alt="ภาพถ่ายเลขไมล์">
+                <div class="image-container">
+                    <img id="mileImage" src="" alt="ภาพถ่ายเลขไมล์">
+                </div>
             </div>
             <div class="form-group">
                 <label>ภาพถ่ายด้านหน้า</label>
-                <img id="frontImage" src="" alt="ภาพถ่ายด้านหน้า">
+                <div class="image-container">
+                    <img id="frontImage" src="" alt="ภาพถ่ายด้านหน้า">
+                </div>
             </div>
             <div class="form-group">
                 <label>ภาพถ่ายด้านหลัง</label>
-                <img id="rearImage" src="" alt="ภาพถ่ายด้านหลัง">
+                <div class="image-container">
+                    <img id="rearImage" src="" alt="ภาพถ่ายด้านหลัง">
+                </div>
             </div>
             <div class="form-group">
                 <label>ภาพถ่ายด้านซ้าย</label>
-                <img id="leftImage" src="" alt="ภาพถ่ายด้านซ้าย">
+                <div class="image-container">
+                    <img id="leftImage" src="" alt="ภาพถ่ายด้านซ้าย">
+                </div>
             </div>
             <div class="form-group">
                 <label>ภาพถ่ายด้านขวา</label>
-                <img id="rightImage" src="" alt="ภาพถ่ายด้านขวา">
+                <div class="image-container">
+                    <img id="rightImage" src="" alt="ภาพถ่ายด้านขวา">
+                </div>
             </div>
             <div class="buttons">
                 <button onclick="goBack()">กลับ</button>
